refactor: zk信息配置化

--- a/lclrpc-demo-consumer/src/main/resources/application.yml
+++ b/lclrpc-demo-consumer/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 
 lclrpc:
   providers: http://localhost:8081/,http://localhost:8082/,http://localhost:8083/
+  zkServers: localhost:2181
+  zkRoot: lclrpc
 
 app:
   id: app1
