--- a/lclrpc-demo-consumer/pom.xml
+++ b/lclrpc-demo-consumer/pom.xml
@@ -11,9 +11,20 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>lclrpc-demo-consumer</name>
 	<description>lclrpc-demo-consumer</description>
-	<properties>
-		<java.version>17</java.version>
-	</properties>
+
+	<!-- 使用 dependencyManagement 依赖springboot，避免不需要启动的子moudle也需要有主类-->
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring.boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.lcl</groupId>
@@ -33,6 +44,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -55,6 +67,13 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
