--- a/lclrpc-demo-consumer/pom.xml
+++ b/lclrpc-demo-consumer/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.lcl</groupId>
+			<artifactId>lclrpc-demo-provider</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
