feat: 增加默认参数 & EnableLclprc注解

--- a/lclrpc-demo-consumer/src/main/resources/application.yml
+++ b/lclrpc-demo-consumer/src/main/resources/application.yml
@@ -15,7 +15,7 @@ server:
 #  timeout: 1000
 #  grayRatio: 10
 #
-#logging:
-#  level:
-#    root: error
-#    com.lcl.lclrpc: info
+logging:
+  level:
+    root: error
+    com.lcl.lclrpc: debug
