refactor: 抽取配置项

--- a/lclrpc-demo-provider/src/main/resources/application.yaml
+++ b/lclrpc-demo-provider/src/main/resources/application.yaml
@@ -1,20 +1,23 @@
-#server:
-#  port: 8080
-#
-#lclrpc:
-#  zkServers: localhost:2181
-#  zkRoot: lclrpc
-#
-#app:
-#  id: app1
-#  namespace: public
-#  env: dev
-#  version: 1.0.0
-#  # 元数据：灰度、dc、单元化
-#  metas: "{gray: 'false', dc: 'bj', unit: 'B001'}"
-#
-#logging:
-#  level:
-#    root: error
-#    com.lcl.lclrpc: info
-#
+server:
+  port: 8080
+
+lclrpc:
+  zk:
+    servers: localhost:2181
+    root: lclrpc
+  app:
+    id: app1
+    namespace: public
+    env: dev
+    version: 1.0.0
+  provider:
+    metas:
+        gray: false
+        dc: bj
+        unit: B001
+
+logging:
+  level:
+    root: error
+    com.lcl.lclrpc: info
+
