--- a/lclrpc-demo-consumer/src/main/resources/application.yml
+++ b/lclrpc-demo-consumer/src/main/resources/application.yml
@@ -1,20 +1,23 @@
 server:
   port: 8088
-#
-#lclrpc:
-#  providers: http://localhost:8081/,http://localhost:8082/,http://localhost:8083/
-#  zkServers: localhost:2181
-#  zkRoot: lclrpc
-#
-#app:
-#  id: app1
-#  namespace: public
-#  env: dev
-#  version: 1.0.0
-#  retries: 2
-#  timeout: 1000
-#  grayRatio: 10
-#
+
+lclrpc:
+  zk:
+    servers: localhost:2181
+    root: lclrpc
+  app:
+    id: app1
+    namespace: public
+    env: dev
+    version: 1.0.0
+  consumer:
+    retries: 2
+    timeout: 1000
+    grayRatio: 20
+    faultLimit: 10 # 30秒内10次错误做隔离
+    halfOpenInitialDelay: 10000
+    halfOpenDelay: 60000
+
 logging:
   level:
     root: error
