--- a/lclrpc-demo-provider/pom.xml
+++ b/lclrpc-demo-provider/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <groupId>com.lcl</groupId>
         <artifactId>lclrpc</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${lclrpc.version}</version>
     </parent>
     <artifactId>lclrpc-demo-provider</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${lclrpc.version}</version>
     <name>lclrpc-demo-provider</name>
     <description>lclrpc-demo-provider</description>
 
@@ -29,12 +29,12 @@
         <dependency>
             <groupId>com.lcl</groupId>
             <artifactId>lclrpc-demo-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${lclrpc.version}</version>
         </dependency>
         <dependency>
             <groupId>com.lcl</groupId>
             <artifactId>lclrpc-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${lclrpc.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
