--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,18 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.lcl</groupId>
     <artifactId>lclrpc</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${lclrpc.version}</version>
     <name>lcl-rpc</name>
     <description>lcl-rpc</description>
     <packaging>pom</packaging>
     <properties>
+        <lclrpc.version>0.0.2-SNAPSHOT</lclrpc.version>
         <spring.boot.version>3.2.3</spring.boot.version>
         <java.version>17</java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <modules>
