--- a/lclrpc-demo-api/pom.xml
+++ b/lclrpc-demo-api/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.lcl</groupId>
+        <groupId>io.github.muyu-ml</groupId>
         <artifactId>lclrpc</artifactId>
         <version>${lclrpc.version}</version>
     </parent>
