--- a/lclrpc-core/pom.xml
+++ b/lclrpc-core/pom.xml
@@ -62,6 +62,11 @@
 			<version>2.2.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.lcl</groupId>
+			<artifactId>lclconfig-client</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-context</artifactId>
 			<version>4.1.0</version>
